# QChatServer

./: CMakeLists.txt  README.md  chat_build.sh
include/: log.h  public.h
include/server/: ChatServer.h  ChatService.h
include/server/db/: connection.h  connectionPool.h
include/server/model/: friendModel.h  group.h  groupModel.h  groupUser.h  offlineMessageModel.h  user.h  userModel.h
include/server/redis/: redis.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: connection.cpp  connectionPool.cpp
src/server/model/: friendModel.cpp  groupModel.cpp  offlineMessageModel.cpp  userModel.cpp
src/server/redis/: redis.cpp
test/: CMakeLists.txt  test_client.cpp  test_server.cpp
